# ansible-playbooks

./: .gitignore  README.md  justfile  playbook.yml  pyproject.toml
certbot-dns-alwaysdata/: .gitignore  pyproject.toml
certbot-dns-alwaysdata/src/certbot_dns_alwaysdata/: __init__.py
roles/base/tasks/: main.yml
roles/base/templates/: 00-banner.j2  unattended-upgrades.j2
roles/certbot/files/: certbot.service  certbot.timer  certbot_cli.ini  known_hosts  logrotate_certbot  ssh_config
roles/certbot/handlers/: main.yml
roles/certbot/tasks/: main.yml
roles/certbot/templates/: alwaysdata_credentials.ini
roles/firewall/handlers/: main.yml
roles/firewall/tasks/: main.yml
roles/gitolite/tasks/: main.yml
roles/mail/handlers/: main.yml
roles/mail/tasks/: main.yml
roles/mosh/tasks/: main.yml
roles/nextcloud/files/: nextcloud-pool.conf  phpinfo.php
roles/nextcloud/meta/: main.yml
roles/nextcloud/tasks/: main.yml
roles/nginx/files/: nginx.conf
roles/nginx/files/nginx/snippets/: ssl-options.conf
roles/nginx/files/snippets/: security.conf
roles/nginx/handlers/: main.yml
roles/nginx/meta/: main.yml
roles/nginx/tasks/: main.yml
roles/php/defaults/: main.yml
roles/php/tasks/: main.yml
roles/postgresql/tasks/: main.yml
roles/wireguard/handlers/: main.yml
roles/wireguard/tasks/: main.yml
roles/wireguard/templates/: 99-wg0.netdev.j2  99-wg0.network.j2  ufw-wireguard.j2
