[tool.poetry]
name = "ansible-playbooks"
version = "0.1.0"
description = ""
authors = ["Thomas Gaudin <thomas.gaudin@centraliens-lille.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
ansible = "^9.2.0"

[tool.poetry.group.dev.dependencies]
ansible-cmdb = "^1.31"
# https://github.com/ansible/ansible-lint/discussions/2820
ansible-lint = { version = "^24.7.0", markers = 'platform_system != "Windows"' }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
