[tool.poetry]
name = "certbot-dns-alwaysdata"
version = "0.1.0"
description = ""
authors = ["Thomas Gaudin <thomas.gaudin@centraliens-lille.org>"]
readme = "README.md"
packages = [
  { include = "certbot_dns_alwaysdata", from = "src" }
]

[tool.poetry.plugins."certbot.plugins"]
dns-alwaysdata = "certbot_dns_alwaysdata:Authenticator"

[tool.poetry.dependencies]
python = ">= 3.8"
certbot = ">= 2.0.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
isort = "^5.13.2"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
